force-app/main/default/objects/sbaa__Approval__c/fields/Order_Line_Approval__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Approval</label>
    <referenceTo>Order_Line_Approval__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>