force-app/main/default/objects/sbaa__Approval__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>