force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_AssigntoQuoteOwner__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AssigntoQuoteOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to assign the approval record to the quote owner other than the default approver</description>
    <label>Assign to Quote Owner</label>
    <type>Checkbox</type>
</CustomField>