force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_EstFreightPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
    <formula>OrderItem__r.PMC_CPQ_EstFreightPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>