force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_Floorprice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Floorprice__c</fullName>
    <formula>IF($Permission.View_OrderLine_FloorPrice, OrderItem__r.PMC_CPQ_Floorprice__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>