force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_FPDQuoteApproval__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FPDQuoteApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FPD Quote Approval</label>
    <type>Checkbox</type>
</CustomField>