force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Incoterms__c</fullName>
    <formula>TEXT(OrderItem__r.PMC_CPQ_Incoterms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incoterms</label>
    <type>Text</type>
</CustomField>