force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_Order__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Order__c</fullName>
    <formula>OrderItem__r.Order.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>