force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_PriceVolume__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceVolume__c</fullName>
    <label>Price/Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Price and Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>