force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product__c</fullName>
    <formula>OrderItem__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>