force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product_Family__c</fullName>
    <formula>OrderItem__r.Product_Family__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>