force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quantity__c</fullName>
    <formula>OrderItem__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>