force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_QuoteExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteExpirationDate__c</fullName>
    <description>This field is created as part of User Story to store Quote&apos;s Expiration Date/Time</description>
    <formula>Quote__r.PMC_CPQ_ExpiresOn__c</formula>
    <label>Quote Expiration Date</label>
    <type>DateTime</type>
</CustomField>