force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_QuoteHotQuote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteHotQuote__c</fullName>
    <formula>Quote__r.PMC_CPQ_HotQuote__c</formula>
    <label>Quote Hot Quote</label>
    <type>Checkbox</type>
</CustomField>