force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_ReminderFrequency__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ReminderFrequency__c</fullName>
    <label>Reminder Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>4 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>