force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_SAPOrderLineID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderLineID__c</fullName>
    <formula>OrderItem__r.PMC_CPQ_SAPOrderLineID__c</formula>
    <label>SAP Order Line ID</label>
    <type>Text</type>
</CustomField>