force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_SAPOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderNumber__c</fullName>
    <formula>OrderItem__r.Order.PMC_CPQ_SAPOrderNumber__c</formula>
    <label>SAP Order Number</label>
    <type>Text</type>
</CustomField>