force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_SendEmail__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>