force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_SoldtoAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldtoAccount__c</fullName>
    <formula>OrderItem__r.PMC_CPQ_SoldtoAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold to</label>
    <type>Text</type>
</CustomField>