force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_SubmitterComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SubmitterComments__c</fullName>
    <description>This field is created to display comments on Approval record page entered by Submitter.</description>
    <label>Submitter Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>