force-app/main/default/objects/sbaa__Approval__c/fields/PMC_CPQ_TaskFormulaCheck__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TaskFormulaCheck__c</fullName>
    <formula>OR( 
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;1 Hour&apos;),
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;2 Hours&apos;),
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;4 Hours&apos;),
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;8 Hours&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Formula Check</label>
    <type>Checkbox</type>
</CustomField>