force-app/main/default/objects/sbaa__Approval__c/fields/StatusIconFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusIconFormula__c</fullName>
    <formula>CASE( TEXT(sbaa__Status__c) ,
  &quot;Requested&quot;, IMAGE(&quot;/img/loading.gif&quot;, &quot;Pending&quot;, 16, 16),
  &quot;Approved&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Approved&quot;, 16, 16),
  &quot;Rejected&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Rejected&quot;, 16, 16),
  &quot;Recalled&quot;, IMAGE(&quot;/img/func_icons/util/ileUndo16.gif&quot;, &quot;Recalled&quot;, 16, 16),
  &quot;Revoked&quot;, IMAGE(&quot;/img/func_icons/remove12_on.gif&quot;, &quot;Revoked&quot;, 16, 16),
  &quot;&quot;
) &amp; &quot; - &quot; &amp; TEXT(sbaa__Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>