force-app/main/default/objects/sbaa__Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>sbaa__Approver__c</columns>
    <columns>sbaa__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
    <columns>PMC_CPQ_PriceVolume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Line_Approval__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>