force-app/main/default/objects/sbaa__Approval__c/listViews/Cases_Pending_Warehouse_Facility.listView-meta.xml
<ListView>
    <fullName>Cases_Pending_Warehouse_Facility</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sbaa__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__Approver__c</field>
        <operation>equals</operation>
        <value>Warehouse &amp; Facility</value>
    </filters>
    <filters>
        <field>sbaa__Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Cases Pending Warehouse &amp; Facility</label>
    <sharedTo>
        <group>Warehouse_Facility</group>
    </sharedTo>
</ListView>