force-app/main/default/objects/sbaa__Approval__c/listViews/FPD_Approval_Requests.listView-meta.xml
<ListView>
    <fullName>FPD_Approval_Requests</fullName>
    <columns>NAME</columns>
    <columns>PMC_CPQ_SAPOrderLineID__c</columns>
    <columns>PMC_CPQ_Order__c</columns>
    <columns>OrderItem__c</columns>
    <columns>PMC_CPQ_SoldtoAccount__c</columns>
    <columns>PMC_CPQ_Incoterms__c</columns>
    <columns>PMC_CPQ_Product_Family__c</columns>
    <columns>PMC_CPQ_Product__c</columns>
    <columns>PMC_CPQ_ProductLocation__c</columns>
    <columns>PMC_CPQ_Floorplusfreight__c</columns>
    <columns>PMC_CPQ_FinalAgreedPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__RecordField__c</field>
        <operation>contains</operation>
        <value>Order_Line_Approval__c</value>
    </filters>
    <filters>
        <field>sbaa__Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>FPD Approval Requests</label>
</ListView>