force-app/main/default/objects/sbaa__Approval__c/listViews/PMC_CPQ_AllPriceApprovals.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_AllPriceApprovals</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>sbaa__Approver__c</columns>
    <columns>sbaa__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
    <columns>PMC_CPQ_PriceVolume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_PriceVolume__c</field>
        <operation>equals</operation>
        <value>Price,Price and Volume</value>
    </filters>
    <label>All Price Approvals</label>
</ListView>